--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>Ishan Coursera</title>
-    <link rel='stylesheet' type='text/css' href='module2.css'>
+    <link rel='stylesheet' type='text/css' href='CSS/module2.css'>
   </head>
   <body>
     <h1>Our Menu</h1>
@@ -31,7 +31,7 @@
           <h2 id='Javascript' class='title'>Java script</h2>
           <p class='description'>
             JavaScript is a programming language commonly used in web development. 
-            It was developed as a means to add dynamic elements to websites
+            It was developed as a means to add dynamic elements to websites.
           </p>
         </div>
       </div>
