--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -13,16 +13,14 @@
         <div class='section'>
           <h2 id='Html' class='title'>Html</h2>
           <p class='description'>
-            HTML (Hypertext Markup Language) is a text-based approach to describing how 
-            content contained within an HTML file is structured.
+            HTML is a computer language devised to allow website creation. These websites can then be viewed by anyone else connected to the Internet. It is relatively easy to learn, with the basics being accessible to most people in one sitting; and quite powerful in what it allows you to create.
         </div>
       </div>
       <div class='col-lg-4 col-md-6 col-sm-12'>
         <div class='section'>
           <h2 id='Css' class='title'>Css</h2>
           <p class='description'>
-            CSS Stands for "Cascading Style Sheet."Cascading style sheets are used to format the layout of Web pages,
-            They can be used to define text styles.t.
+            CSS is the language for describing the presentation of Web pages, including colors, layout, and fonts. It allows one to adapt the presentation to different types of devices, such as large screens, small screens, or printers. CSS is independent of HTML and can be used with any XML-based markup language.
           </p>
         </div>
       </div>
